Resolves: tdf#138417 crash on customize sidebar

Change-Id: Icbb08b44e7f8729704d8278378a259fecb9bee4d
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/106974
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>